--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Baek2back <dumbuk12@naver.com>",
   "license": "MIT",
   "scripts": {
-    "start": "webpack serve --mode=development"
+    "start": "webpack serve --mode=development --open"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.29.2",
@@ -16,6 +16,7 @@
     "dotenv-webpack": "^7.0.3",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "^2.24.1",
     "eslint-plugin-prettier": "^3.4.1",
     "html-loader": "^2.1.2",
