--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "precommit": "lint-staged"
   },
   "lint-staged": {
-    "src/**/*.+(js,jsx,ts,tsx,json,css,scss,md)": ["eslint --fix", "git add"]
+    "src/**/*.+(js,jsx,ts,tsx)": ["eslint --fix", "git add"]
   },
   "devDependencies": {
     "@commitlint/cli": "^13.1.0",
