--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@typescript-eslint/parser": "^4.29.2",
     "autoprefixer": "^10.3.4",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "commitlint-config-gitmoji": "^2.2.5",
     "css-loader": "^6.2.0",
     "dotenv-webpack": "^7.0.3",
     "eslint": "^7.32.0",
@@ -51,6 +52,7 @@
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
     "stylelint": "^13.13.1",
+    "stylelint-a11y": "^1.2.3",
     "stylelint-config-standard": "^22.0.0",
     "stylelint-order": "^4.1.0",
     "stylelint-scss": "^3.20.1",
