--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   ],
   "devDependencies": {
     "@babel/core": "^7.15.5",
+    "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.15.6",
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
@@ -67,6 +68,7 @@
     "webpack-dev-server": "^4.0.0"
   },
   "dependencies": {
+    "@babel/runtime-corejs3": "^7.15.4",
     "core-js": "^3.18.1"
   }
 }
