--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     ]
   },
   "browserslist": [
-    "last 3 version",
-    "Chrome >= 59",
-    "ie 11",
-    "not ie <= 10"
+    "> 1%",
+    "last 2 versions",
+    "not dead",
+    "ie >= 11"
   ],
   "devDependencies": {
     "@babel/core": "^7.15.5",
