--- a/package.json
+++ b/package.json
@@ -58,8 +58,12 @@
     "style-loader": "^3.2.1",
     "stylelint": "^13.13.1",
     "stylelint-a11y": "^1.2.3",
+    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-rational-order": "^0.1.2",
+    "stylelint-config-recommended-scss": "^4.3.0",
     "stylelint-config-standard": "^22.0.0",
     "stylelint-order": "^4.1.0",
+    "stylelint-prettier": "^1.2.0",
     "stylelint-scss": "^3.20.1",
     "ts-loader": "^9.2.5",
     "typescript": "^4.3.5",
@@ -69,6 +73,7 @@
   },
   "dependencies": {
     "@babel/runtime-corejs3": "^7.15.4",
-    "core-js": "^3.18.1"
+    "core-js": "^3.18.1",
+    "cross-env": "^7.0.3"
   }
 }
