--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "author": "Baek2back <dumbuk12@naver.com>",
   "license": "MIT",
   "scripts": {
-    "start": "webpack serve --mode=development --open",
-    "build": "webpack",
+    "start": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" NODE_ENV=development webpack serve --open",
+    "build": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" webpack",
     "prepare": "husky install",
     "precommit": "lint-staged"
   },
@@ -29,6 +29,11 @@
     "@babel/preset-env": "^7.15.6",
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
+    "@types/dotenv-webpack": "^7.0.3",
+    "@types/mini-css-extract-plugin": "^2.3.0",
+    "@types/node": "^16.10.3",
+    "@types/webpack": "^5.28.0",
+    "@types/webpack-dev-server": "^4.3.1",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
     "autoprefixer": "^10.3.4",
@@ -66,8 +71,10 @@
     "stylelint-prettier": "^1.2.0",
     "stylelint-scss": "^3.20.1",
     "ts-loader": "^9.2.5",
+    "ts-node": "^10.2.1",
+    "tsconfig-paths": "^3.11.0",
     "typescript": "^4.3.5",
-    "webpack": "^5.51.1",
+    "webpack": "^5.58.1",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.0.0"
   },
