--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/core": "^7.15.5",
     "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.15.6",
+    "@babel/preset-react": "^7.14.5",
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
     "@types/dotenv-webpack": "^7.0.3",
@@ -79,7 +80,11 @@
   },
   "dependencies": {
     "@babel/runtime-corejs3": "^7.15.4",
+    "@types/react": "^17.0.30",
+    "@types/react-dom": "^17.0.9",
     "core-js": "^3.18.1",
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
